# TJHSST-Computer-Vision

./: README.md
Computer_Vision/1 Circles and Triangles/: CMakeLists.txt  main.cpp
Computer_Vision/2 Smallest Square Extension/: CMakeLists.txt  l022.cpp  output.ppm  points.txt  sampleoutput.txt
Computer_Vision/3 Closest Pair of Points/: CMakeLists.txt  l034.cpp
Computer_Vision/4 Convex Hull/: CMakeLists.txt  l042.cpp
Computer_Vision/5 Edge Detection/: CMakeLists.txt  l053.cpp
Computer_Vision/6 Circle Hough Transform/: CMakeLists.txt  l062.cpp
Computer_Vision/7_OpenCV_Circle_Detection/: CMakeLists.txt  l071.cpp
Computer_Vision/8 Platonic Solid Rotation/: CMakeLists.txt  l082.cpp  l083.cpp
Computer_Vision/Deccan Test/: CMakeLists.txt  main.cpp
Computer_Vision/OpenCV/: CMakeLists.txt  DisplayImage.cpp  Makefile  coordinates.txt  exe  exe.sh  l082.cpp  l083.cpp  log.txt  results.txt  rotation.avi
Computer_Vision/OpenCV/.ipynb_checkpoints/: CMakeCache-checkpoint.txt  Makefile-checkpoint  ToExecuteCVdemo-checkpoint.txt  cmake_install-checkpoint.cmake  coordinates-checkpoint.txt  l081-checkpoint.cpp  l083-checkpoint.cpp  logs-checkpoint.txt  results-checkpoint.txt
Computer_Vision/OpenCV/l083Videos/: rotation.avi
